Added MQTT transport

--- a/WINC1500_thethings.iO_DEMO_WINC1500XplainedPro/Debug/Makefile
+++ b/WINC1500_thethings.iO_DEMO_WINC1500XplainedPro/Debug/Makefile
@@ -165,7 +165,9 @@ SUBDIRS :=  \
 ../src/doc/ \
 ../src/iot/ \
 ../src/iot/http/ \
-../src/iot/mqtt
+../src/iot/mqtt \
+../src/iot/thethingsio \
+../vsix/
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
@@ -226,7 +228,7 @@ C_SRCS +=  \
 ../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0/fattime_rtc.c \
 ../src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.c \
 ../src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/ccsbcs.c \
-../src/thethingsio_client.c \
+../src/iot/thethingsio/thethingsio_client.c \
 ../src/iot/http/http_client.c \
 ../src/iot/json.c \
 ../src/iot/stream_writer.c \
@@ -298,7 +300,7 @@ src/ASF/thirdparty/fatfs/fatfs-port-r0.09/diskio.o \
 src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0/fattime_rtc.o \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.o \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/ccsbcs.o \
-src/thethingsio_client.o \
+src/iot/thethingsio/thethingsio_client.o \
 src/iot/http/http_client.o \
 src/iot/json.o \
 src/iot/stream_writer.o \
@@ -363,7 +365,7 @@ src/ASF/thirdparty/fatfs/fatfs-port-r0.09/diskio.o \
 src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0/fattime_rtc.o \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.o \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/ccsbcs.o \
-src/thethingsio_client.o \
+src/iot/thethingsio/thethingsio_client.o \
 src/iot/http/http_client.o \
 src/iot/json.o \
 src/iot/stream_writer.o \
@@ -428,7 +430,7 @@ src/ASF/thirdparty/fatfs/fatfs-port-r0.09/diskio.d \
 src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0/fattime_rtc.d \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.d \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/ccsbcs.d \
-src/thethingsio_client.d \
+src/iot/thethingsio/thethingsio_client.d \
 src/iot/http/http_client.d \
 src/iot/json.d \
 src/iot/stream_writer.d \
@@ -493,7 +495,7 @@ src/ASF/thirdparty/fatfs/fatfs-port-r0.09/diskio.d \
 src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0/fattime_rtc.d \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/ff.d \
 src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/ccsbcs.d \
-src/thethingsio_client.d \
+src/iot/thethingsio/thethingsio_client.d \
 src/iot/http/http_client.d \
 src/iot/json.d \
 src/iot/stream_writer.d \
@@ -896,7 +898,7 @@ src/ASF/thirdparty/fatfs/fatfs-r0.09/src/option/%.o: ../src/ASF/thirdparty/fatfs
 	@echo Finished building: $<
 	
 
-src/%.o: ../src/%.c
+src/iot/thethingsio/%.o: ../src/iot/thethingsio/%.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 4.9.3
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAMD21J18A__ -DDEBUG -DBOARD=SAMD21_XPLAINED_PRO -DTCC_ASYNC=true -DARM_MATH_CM0PLUS=true -DSPI_CALLBACK_MODE=true -DSYSTICK_MODE -D__SAMD21J18A__ -DEXTINT_CALLBACK_MODE=true -DUSART_CALLBACK_MODE=true -DI2C_MASTER_CALLBACK_MODE=true -DRTC_CALENDAR_ASYNC=true -DADC_CALLBACK_MODE=true -DSD_MMC_ENABLE  -I"../common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/iot/http" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam0/boards/samw25_xplained_pro" -I"../src/ASF/common/components/wifi/winc1500/socket/source" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/include" -I"../src/ASF/sam0/drivers/system/pinmux" -I"../src/ASF/sam0/drivers/adc" -I"../src/ASF/common/components/wifi/winc1500/driver/include" -I"../src/ASF/sam0/drivers/system/reset/reset_sam_d_r" -I"../src/ASF/common/boards" -I"../src/ASF/common2/services/delay" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam0/drivers/sercom/i2c" -I"../src/ASF/sam0/utils" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam0/drivers/system/reset" -I"../src/ASF/common/components/wifi/winc1500/spi_flash" -I"../src" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper" -I"../src/ASF/sam0/utils/preprocessor" -I"../src/ASF/sam0/utils/cmsis/samd21/include" -I"../src/ASF/sam0/drivers/system" -I"../src/ASF/sam0/drivers/system/clock/clock_samd21_r21_da" -I"../src/ASF/common/components/wifi/winc1500/socket/include" -I"../src/ASF/sam0/drivers/adc/adc_sam_d_r" -I"../src/ASF/common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/ASF/sam0/utils/cmsis/samd21/source" -I"../src/ASF/common/components/wifi/winc1500/common/source" -I"../src/ASF/sam0/drivers/rtc" -I"../src/ASF/common2/components/memory/sd_mmc" -I"../src/ASF/common/components/wifi/winc1500/bsp" -I"../src/ASF/sam0/drivers/system/interrupt" -I"../src/ASF/common/components/wifi/winc1500/driver" -I"../src/ASF/sam0/utils/header_files" -I"../src/ASF/sam0/drivers/system/power/power_sam_d_r" -I"../src/ASF/sam0/drivers/tcc" -I"../src/ASF/common/utils" -I"../src/doc" -I"../src/ASF/common/components/wifi/winc1500/socket" -I"../src/ASF/sam0/drivers/system/power" -I"../src/ASF/common/components/wifi/winc1500/common/include" -I"../src/ASF/common2/services/delay/sam0" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/sam0/drivers/sercom/spi" -I"../src/ASF/sam0/drivers/port" -I"../src/ASF/sam0/utils/stdio/stdio_serial" -I"../src/ASF/sam0/drivers/sercom/usart" -I"../src/ASF/sam0/boards" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/source" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/config" -I"../src/ASF/common/components/wifi/winc1500/driver/source" -I"../src/ASF/common/components/wifi/winc1500/bsp/include" -I"../src/ASF/sam0/drivers/system/interrupt/system_interrupt_samd21" -I"../src/iot" -I"../src/ASF/sam0/drivers/sercom" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0" -I"../src/ASF/common/components/wifi/winc1500/bsp/source" -I"../src/ASF/common/components/wifi/winc1500/common" -I"../src/ASF/sam0/drivers/extint" -I"../src/ASF/sam0/components/sensor/at30tse75x" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam0/drivers/system/clock" -I"../src/ASF/sam0/drivers/nvm" -I"../src/ASF/common/services/sleepmgr"  -O1 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m0plus -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
@@ -911,6 +913,13 @@ src/iot/http/%.o: ../src/iot/http/%.c
 	
 
 src/iot/%.o: ../src/iot/%.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 4.9.3
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAMD21J18A__ -DDEBUG -DBOARD=SAMD21_XPLAINED_PRO -DTCC_ASYNC=true -DARM_MATH_CM0PLUS=true -DSPI_CALLBACK_MODE=true -DSYSTICK_MODE -D__SAMD21J18A__ -DEXTINT_CALLBACK_MODE=true -DUSART_CALLBACK_MODE=true -DI2C_MASTER_CALLBACK_MODE=true -DRTC_CALENDAR_ASYNC=true -DADC_CALLBACK_MODE=true -DSD_MMC_ENABLE  -I"../common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/iot/http" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam0/boards/samw25_xplained_pro" -I"../src/ASF/common/components/wifi/winc1500/socket/source" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/include" -I"../src/ASF/sam0/drivers/system/pinmux" -I"../src/ASF/sam0/drivers/adc" -I"../src/ASF/common/components/wifi/winc1500/driver/include" -I"../src/ASF/sam0/drivers/system/reset/reset_sam_d_r" -I"../src/ASF/common/boards" -I"../src/ASF/common2/services/delay" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam0/drivers/sercom/i2c" -I"../src/ASF/sam0/utils" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam0/drivers/system/reset" -I"../src/ASF/common/components/wifi/winc1500/spi_flash" -I"../src" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper" -I"../src/ASF/sam0/utils/preprocessor" -I"../src/ASF/sam0/utils/cmsis/samd21/include" -I"../src/ASF/sam0/drivers/system" -I"../src/ASF/sam0/drivers/system/clock/clock_samd21_r21_da" -I"../src/ASF/common/components/wifi/winc1500/socket/include" -I"../src/ASF/sam0/drivers/adc/adc_sam_d_r" -I"../src/ASF/common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/ASF/sam0/utils/cmsis/samd21/source" -I"../src/ASF/common/components/wifi/winc1500/common/source" -I"../src/ASF/sam0/drivers/rtc" -I"../src/ASF/common2/components/memory/sd_mmc" -I"../src/ASF/common/components/wifi/winc1500/bsp" -I"../src/ASF/sam0/drivers/system/interrupt" -I"../src/ASF/common/components/wifi/winc1500/driver" -I"../src/ASF/sam0/utils/header_files" -I"../src/ASF/sam0/drivers/system/power/power_sam_d_r" -I"../src/ASF/sam0/drivers/tcc" -I"../src/ASF/common/utils" -I"../src/doc" -I"../src/ASF/common/components/wifi/winc1500/socket" -I"../src/ASF/sam0/drivers/system/power" -I"../src/ASF/common/components/wifi/winc1500/common/include" -I"../src/ASF/common2/services/delay/sam0" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/sam0/drivers/sercom/spi" -I"../src/ASF/sam0/drivers/port" -I"../src/ASF/sam0/utils/stdio/stdio_serial" -I"../src/ASF/sam0/drivers/sercom/usart" -I"../src/ASF/sam0/boards" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/source" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/config" -I"../src/ASF/common/components/wifi/winc1500/driver/source" -I"../src/ASF/common/components/wifi/winc1500/bsp/include" -I"../src/ASF/sam0/drivers/system/interrupt/system_interrupt_samd21" -I"../src/iot" -I"../src/ASF/sam0/drivers/sercom" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0" -I"../src/ASF/common/components/wifi/winc1500/bsp/source" -I"../src/ASF/common/components/wifi/winc1500/common" -I"../src/ASF/sam0/drivers/extint" -I"../src/ASF/sam0/components/sensor/at30tse75x" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam0/drivers/system/clock" -I"../src/ASF/sam0/drivers/nvm" -I"../src/ASF/common/services/sleepmgr"  -O1 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m0plus -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/%.o: ../src/%.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 4.9.3
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAMD21J18A__ -DDEBUG -DBOARD=SAMD21_XPLAINED_PRO -DTCC_ASYNC=true -DARM_MATH_CM0PLUS=true -DSPI_CALLBACK_MODE=true -DSYSTICK_MODE -D__SAMD21J18A__ -DEXTINT_CALLBACK_MODE=true -DUSART_CALLBACK_MODE=true -DI2C_MASTER_CALLBACK_MODE=true -DRTC_CALENDAR_ASYNC=true -DADC_CALLBACK_MODE=true -DSD_MMC_ENABLE  -I"../common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/iot/http" -I"../src/ASF/common/services/storage/ctrl_access" -I"../src/ASF/sam0/boards/samw25_xplained_pro" -I"../src/ASF/common/components/wifi/winc1500/socket/source" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/include" -I"../src/ASF/sam0/drivers/system/pinmux" -I"../src/ASF/sam0/drivers/adc" -I"../src/ASF/common/components/wifi/winc1500/driver/include" -I"../src/ASF/sam0/drivers/system/reset/reset_sam_d_r" -I"../src/ASF/common/boards" -I"../src/ASF/common2/services/delay" -I"../src/ASF/common/components/wifi/winc1500" -I"../src/ASF/sam0/drivers/sercom/i2c" -I"../src/ASF/sam0/utils" -I"../src/ASF/thirdparty/CMSIS/Lib/GCC" -I"../src/ASF/sam0/drivers/system/reset" -I"../src/ASF/common/components/wifi/winc1500/spi_flash" -I"../src" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper" -I"../src/ASF/sam0/utils/preprocessor" -I"../src/ASF/sam0/utils/cmsis/samd21/include" -I"../src/ASF/sam0/drivers/system" -I"../src/ASF/sam0/drivers/system/clock/clock_samd21_r21_da" -I"../src/ASF/common/components/wifi/winc1500/socket/include" -I"../src/ASF/sam0/drivers/adc/adc_sam_d_r" -I"../src/ASF/common/components/wifi/winc1500/exosite_demo/samd21g18a_samw25_xplained_pro" -I"../src/ASF/sam0/utils/cmsis/samd21/source" -I"../src/ASF/common/components/wifi/winc1500/common/source" -I"../src/ASF/sam0/drivers/rtc" -I"../src/ASF/common2/components/memory/sd_mmc" -I"../src/ASF/common/components/wifi/winc1500/bsp" -I"../src/ASF/sam0/drivers/system/interrupt" -I"../src/ASF/common/components/wifi/winc1500/driver" -I"../src/ASF/sam0/utils/header_files" -I"../src/ASF/sam0/drivers/system/power/power_sam_d_r" -I"../src/ASF/sam0/drivers/tcc" -I"../src/ASF/common/utils" -I"../src/doc" -I"../src/ASF/common/components/wifi/winc1500/socket" -I"../src/ASF/sam0/drivers/system/power" -I"../src/ASF/common/components/wifi/winc1500/common/include" -I"../src/ASF/common2/services/delay/sam0" -I"../src/ASF/thirdparty/fatfs/fatfs-r0.09/src" -I"../src/ASF/sam0/drivers/sercom/spi" -I"../src/ASF/sam0/drivers/port" -I"../src/ASF/sam0/utils/stdio/stdio_serial" -I"../src/ASF/sam0/drivers/sercom/usart" -I"../src/ASF/sam0/boards" -I"../src/ASF/common/components/wifi/winc1500/bus_wrapper/source" -I"../src/ASF/thirdparty/CMSIS/Include" -I"../src/config" -I"../src/ASF/common/components/wifi/winc1500/driver/source" -I"../src/ASF/common/components/wifi/winc1500/bsp/include" -I"../src/ASF/sam0/drivers/system/interrupt/system_interrupt_samd21" -I"../src/iot" -I"../src/ASF/sam0/drivers/sercom" -I"../src/ASF/thirdparty/fatfs/fatfs-port-r0.09/sam0" -I"../src/ASF/common/components/wifi/winc1500/bsp/source" -I"../src/ASF/common/components/wifi/winc1500/common" -I"../src/ASF/sam0/drivers/extint" -I"../src/ASF/sam0/components/sensor/at30tse75x" -I"../src/ASF/common/services/serial" -I"../src/ASF/sam0/drivers/system/clock" -I"../src/ASF/sam0/drivers/nvm" -I"../src/ASF/common/services/sleepmgr"  -O1 -fdata-sections -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m0plus -c -pipe -fno-strict-aliasing -Wall -Wstrict-prototypes -Wmissing-prototypes -Werror-implicit-function-declaration -Wpointer-arith -std=gnu99 -ffunction-sections -fdata-sections -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wunused -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wbad-function-cast -Wwrite-strings -Wsign-compare -Waggregate-return  -Wmissing-declarations -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Wlong-long -Wunreachable-code -Wcast-align --param max-inline-insns-single=500 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
